# rust-vtk

./: Cargo.toml  README.md  build.rs
libvtk_wrapper/: CMakeLists.txt  gen.sh  vtk_proxy.c  vtk_proxy.h  vtk_swig.i  vtk_swig_wrap.cxx
src/: lib.rs  main.rs
vtk-sys/: Cargo.toml  build.rs  gen.sh
vtk-sys/examples/: main.rs
vtk-sys/src/: ffi.rs  lib.rs
vtk-sys/vtk_c_wrapper/: CMakeLists.txt  vtk_proxy.c  vtk_proxy.h  vtk_swig.i  vtk_swig_wrap.cxx
